[project]
name = "comfyui_3dposeeditor"
description = "Nodes:3D Pose Editor"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/hinablue/ComfyUI_3dPoseEditor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_3dPoseEditor"
Icon = ""
